--- a/tripplanner/app/src/main/res/layout/activity_main.xml
+++ b/tripplanner/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/dest_recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_marginTop="16dp"
         android:layout_alignParentTop="true"/>
 
