--- a/tripplanner/app/src/main/res/values/dimens.xml
+++ b/tripplanner/app/src/main/res/values/dimens.xml
@@ -2,4 +2,6 @@
 <resources>
 
     <dimen name="app_margin">16dp</dimen>
+    <dimen name="image_width">380dp</dimen>
+    <dimen name="image_height">200dp</dimen>
 </resources>
