--- a/tripplanner/app/src/main/res/values-land/dimens.xml
+++ b/tripplanner/app/src/main/res/values-land/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="image_width">300dp</dimen>
     <dimen name="image_height">150dp</dimen>
+    <dimen name="user_info_text_size">20dp</dimen>
 </resources>
