--- a/tripplanner/app/src/main/res/values/dimens.xml
+++ b/tripplanner/app/src/main/res/values/dimens.xml
@@ -3,4 +3,6 @@
     <dimen name="app_margin">16dp</dimen>
     <dimen name="image_width">380dp</dimen>
     <dimen name="image_height">200dp</dimen>
+    <dimen name="form_item_distance">32dp</dimen>
+    <dimen name="user_info_text_size">18dp</dimen>
 </resources>
