--- a/tripplanner/app/src/main/res/values/styles.xml
+++ b/tripplanner/app/src/main/res/values/styles.xml
@@ -8,4 +8,19 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="error_msg">
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">@dimen/user_info_text_size</item>
+    </style>
+
+    <style name="empty_list">
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">@dimen/user_info_text_size</item>
+    </style>
+
+    <style name="dest_title" parent="TextAppearance.AppCompat.Body1">
+        <item name="android:textStyle">bold</item>
+        <item name="android:paddingLeft">5dp</item>
+    </style>
+
 </resources>
