--- a/tripplanner/app/src/main/res/layout/dest_list_item.xml
+++ b/tripplanner/app/src/main/res/layout/dest_list_item.xml
@@ -3,20 +3,41 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginTop="@dimen/app_margin"
     android:orientation="vertical">
+    
 
-    <TextView
-        android:id="@+id/dest_title"
-        android:layout_width="wrap_content"
+    <androidx.cardview.widget.CardView
+        android:layout_width="@dimen/image_width"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:text="" />
+        android:id="@+id/card_view"
+        android:clickable="true"
+        android:foreground="@drawable/card_background"
+        android:focusable="true">
 
-    <ImageView
-        android:id="@+id/dest_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:contentDescription="@string/destination_image" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/dest_image"
+                android:layout_width="@dimen/image_width"
+                android:layout_height="@dimen/image_height"
+                android:contentDescription="@string/destination_image"
+                android:scaleType="centerCrop"/>
+
+            <TextView
+                android:id="@+id/dest_title"
+                style="@style/dest_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingBottom="5dp"
+                android:paddingTop="5dp"
+                android:text="" />
+
+
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
 </androidx.appcompat.widget.LinearLayoutCompat>
