--- a/tripplanner/app/src/main/res/layout/activity_main.xml
+++ b/tripplanner/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,14 @@
         android:layout_centerVertical="true"
         android:visibility="gone"/>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/loading_msg"
+        android:text="@string/loading_msg"
+        android:layout_marginTop="@dimen/app_margin"
+        android:visibility="gone"/>
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/add_dest"
         android:layout_width="wrap_content"
