Refactor: move constants to resource file

--- a/tripplanner/app/src/main/res/layout-land/activity_add_destination.xml
+++ b/tripplanner/app/src/main/res/layout-land/activity_add_destination.xml
@@ -12,7 +12,7 @@
         android:id="@+id/save_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="@dimen/land_save_button_margin"
         android:background="@drawable/save_button"
         android:text="@string/add_button_label"
         app:layout_constraintEnd_toEndOf="parent"
@@ -36,9 +36,9 @@
         android:id="@+id/dest_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginEnd="@dimen/app_margin"
+        android:layout_marginRight="@dimen/app_margin"
+        android:layout_marginTop="@dimen/app_margin"
         android:autofillHints=""
         android:hint="@string/destination_name_hint"
         android:inputType="textPersonName"
@@ -52,9 +52,9 @@
         android:id="@+id/latitude"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginEnd="@dimen/app_margin"
+        android:layout_marginRight="@dimen/app_margin"
+        android:layout_marginTop="@dimen/app_margin"
         android:autofillHints=""
         android:hint="@string/gps_coordinate_lat_label"
         android:inputType="numberSigned|numberDecimal"
@@ -80,7 +80,7 @@
         android:id="@+id/add_dest_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="@dimen/app_margin"
         android:text="@string/add_new_dest_title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
