--- a/tripplanner/app/src/main/res/layout/dest_list_item.xml
+++ b/tripplanner/app/src/main/res/layout/dest_list_item.xml
@@ -32,8 +32,8 @@
                 style="@style/dest_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingBottom="5dp"
-                android:paddingTop="5dp"
+                android:paddingBottom="@dimen/dest_title_padding"
+                android:paddingTop="@dimen/dest_title_padding"
                 android:text="" />
 
 
