--- a/tripplanner/app/src/main/res/values/dimens.xml
+++ b/tripplanner/app/src/main/res/values/dimens.xml
@@ -5,4 +5,6 @@
     <dimen name="image_height">200dp</dimen>
     <dimen name="form_item_distance">32dp</dimen>
     <dimen name="user_info_text_size">18dp</dimen>
+    <dimen name="dest_title_padding">5dp</dimen>
+    <dimen name="land_save_button_margin">24dp</dimen>
 </resources>
