Refactor: move constants to resource file

--- a/tripplanner/app/src/main/res/layout/activity_add_destination.xml
+++ b/tripplanner/app/src/main/res/layout/activity_add_destination.xml
@@ -62,8 +62,8 @@
         android:id="@+id/longitude"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginLeft="@dimen/app_margin"
+        android:layout_marginStart="@dimen/app_margin"
         android:hint="@string/gps_coordinate_long_label"
         android:inputType="numberSigned|numberDecimal"
         app:layout_constraintBaseline_toBaselineOf="@+id/latitude"
